[gd_scene load_steps=20 format=2]

[ext_resource path="res://resource/monster105/Boss.png" type="Texture" id=1]
[ext_resource path="res://Scene/Boss.gd" type="Script" id=2]
[ext_resource path="res://resource/effect_020f/effect_020f_01.png" type="Texture" id=3]
[ext_resource path="res://Scene/PumpHP.tscn" type="PackedScene" id=4]
[ext_resource path="res://resource/effect_020f/effect_020f_02.png" type="Texture" id=5]
[ext_resource path="res://resource/effect_020f/effect_020f_03.png" type="Texture" id=6]
[ext_resource path="res://resource/effect_020f/effect_020f_04.png" type="Texture" id=7]
[ext_resource path="res://resource/effect_020f/effect_020f_05.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=6]
radius = 9.0

[sub_resource type="CapsuleShape2D" id=1]
radius = 41.0
height = 32.0

[sub_resource type="Animation" id=2]
resource_name = "AttackOne"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.6, 2.2, 2.8, 3.3, 3.9, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot_red_ball"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "AttackTwo"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 4, 6, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BlueFire:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 4.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BlueFire/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 4.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Die"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "win_game"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Fly"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BlueFire/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="CircleShape2D" id=9]
radius = 435.005

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 45.1007
height = 93.6463

[node name="Boss" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="BossHurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossHurtBox"]
position = Vector2( 0, 116 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackOne = SubResource( 2 )
anims/AttackTwo = SubResource( 8 )
anims/Die = SubResource( 3 )
anims/Fly = SubResource( 4 )
anims/Idle = SubResource( 7 )
anims/RESET = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="PlayerDetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource( 9 )

[node name="PumpHP" parent="." instance=ExtResource( 4 )]
position = Vector2( -215, -52 )
hpHeight = 30
hpWidth = 500

[node name="BlueFire" type="Area2D" parent="."]

[node name="Sprite" type="AnimatedSprite" parent="BlueFire"]
position = Vector2( -200, 160 )
rotation = -0.785398
scale = Vector2( 1.73974, 2.04964 )
frames = SubResource( 11 )
frame = 3
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlueFire"]
position = Vector2( -200, 160 )
rotation = 0.785398
shape = SubResource( 10 )

[connection signal="area_entered" from="BossHurtBox" to="." method="_on_BossHurtBox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_entered"]
